# haskell-playground

./: stack.yaml
stm/: haskell-playground.cabal
stm-delay/: Main.hs  stm-delay.cabal
stm-eg/: stm-eg.cabal
stm-eg/app/: Main.hs
