name:                stm-delay
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/nebtrx/haskell-playground/stm
license:             BSD3
license-file:        LICENSE
author:              Omar Ahmed
maintainer:          neb.trx@gmail.com
copyright:           2016 Omar Ahmed
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable stm-delay
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stm>=2.4.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nebtrx/haskell-playground
